<resources>
    <string name="app_name">PacmanKotlin</string>
    <string name="points">Points:</string>
    <string name="move_up">Move up</string>
    <string name="move_down">Move down</string>

    <string name="move_left">Move left</string>

    <string name="move_right">Move Rigth</string>
    <string name="action_settings">Settings</string>
    <string name="newgame">New Game</string>
    <string name="pause">Pause</string>
    <string name="timerValue">Timer Value: %1$d</string>
    <string name="timeLeft">Timer left: %1$d</string>
    <string name="highscore">Highscore:</string>
</resources>
