<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    tools:context="org.pondar.pacmankotlin.MainActivity">

    <!-- Notice how the custom view is referenced here with
    a full package path-->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/moveUp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_up" />

        <Button
            android:id="@+id/moveRight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_left" />

        <Button
            android:id="@+id/moveLeft"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_right" />

        <Button
            android:id="@+id/movedown"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/move_down" />
    </LinearLayout>

    <TextView
        android:id="@+id/pointsView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/points"
        android:textSize="24sp" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <TextView
        android:id="@+id/timer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="TextView" />

    <Button
        android:id="@+id/pause"
        android:layout_width="78dp"
        android:layout_height="wrap_content"
        android:text="@string/pause" />

    <Button
        android:id="@+id/share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="playSound"
        android:text="Its Corona time!" />

    <org.pondar.pacmankotlin.GameView
        android:id="@+id/gameView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </org.pondar.pacmankotlin.GameView>

</LinearLayout>
